# rotom_bot

./: .gitignore  Dockerfile  README.md  config.toml.example  docker-compose.yaml  main.py  pyproject.toml
src/: commands.py  configuration.py  jobs.py
src/scrapers/: mediamarkt.py  sergas.py
